Consistent Fonts across Computers: Font Folder Created

--- a/CSS/proj_css.css
+++ b/CSS/proj_css.css
@@ -72,7 +72,7 @@
     color: dodgerblue;
     text-decoration: none;
     font-size: 20px;
-    font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont,"RobotoReg", sans-serif;
     font-weight: 400;
 }
 
