--- a/CSS/resume_css.css
+++ b/CSS/resume_css.css
@@ -408,7 +408,7 @@ body {
 #edu h1 {
     margin-top: -3%;
     font-size: 55px;
-    font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont,"RobotoReg", sans-serif;
     font-weight: 500;
     text-align: center;
     color: rgba(221,51,34,1);
@@ -535,7 +535,7 @@ body {
 
 #skills h1 {
     font-size: 55px;
-    font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont,"RobotoReg", sans-serif;
     font-weight: 500;
     text-align: center;
     color: rgba(221,51,34,1);
