--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -5,6 +5,148 @@ border-radius: 100%;
 button
 <br/><button> Button </button>
 */
+
+/*REMOVE THIS NAV BAR CODE AFTER FINISHING RESPONSIVE DESIGN ON ALL PAGES*/
+/*REMOVE THIS NAV BAR CODE AFTER FINISHING RESPONSIVE DESIGN ON ALL PAGES*/
+/*REMOVE THIS NAV BAR CODE AFTER FINISHING RESPONSIVE DESIGN ON ALL PAGES*/
+/*REMOVE THIS NAV BAR CODE AFTER FINISHING RESPONSIVE DESIGN ON ALL PAGES*/
+body {
+    /*min-width: 1519px;*/
+    margin: auto;
+}
+
+#nav ul {
+    display:inline;
+}
+
+#nav {
+    min-width: 800px;
+    z-index: 10;
+    text-align: center;
+    background-color: black;
+    padding: 15px 0 15px 0;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
+#nav > nav > ul > li > a{
+    transition:all linear 0.15s;
+    background-color: black;
+    display: inline;
+    padding: 15px 10px;
+    text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;
+    font-weight: 300;
+}
+
+#nav a:link { color: white}
+#nav a:visited {color: white}
+#nav a:active {color: white}
+#nav a:hover { color: orange;}
+#nav a:focus { color: orange;}
+
+._center {
+    text-align: center;
+}
+
+
+/*For drop-down menu*/
+
+.clearfix:after {
+    display:block;
+    clear:both;
+}
+
+/*----- Menu Outline -----*/
+.menu-wrap {
+    width:100%;
+    box-shadow:0px 1px 3px rgba(0,0,0,0.2);
+    background:#3e3436;
+}
+
+.menu {
+    text-align: center;
+    width:100%;
+    margin:0px auto;
+}
+
+.menu li {
+    margin:0px;
+    list-style:none;
+    font-family:'serif';
+}
+
+.menu a {
+    transition:all linear 0.15s;
+    /*color:#919191;*/
+}
+
+.menu li:hover > a, .menu .current-item > a {
+    text-decoration:none;
+}
+
+
+/*----- Top Level -----*/
+.menu > ul > li {
+    display:inline-block;
+    position:relative;
+}
+
+.menu > ul > li > a {
+    padding:10px 40px;
+    display:inline-block;
+}
+
+.menu > ul > li:hover > a, .menu > ul > .current-item > a {
+    background:#2e2728;
+}
+
+/*----- Bottom Level -----*/
+.menu li:hover .sub-menu {
+    z-index:1;
+    opacity:0.95;
+}
+
+.sub-menu {
+    margin-top: 10%;
+    text-align: left;
+    width:150%;
+    padding:5px 30px;
+    position:absolute;
+    top:120%;
+    left:0px;
+    z-index:-1;
+    opacity:0;
+    transition:opacity linear 0.15s;
+    box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+    background:#2e2728;
+
+}
+
+.sub-menu li {
+    display:block;
+    font-size:16px;
+}
+
+.sub-menu li a {
+    margin-left: -25%;
+    padding:10px 30px;
+    display:block;
+    text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;
+    font-weight: 300;
+}
+
+
+
+
+
+
+
+
+
 #bg {
     float: right;
     margin-top: -14%;
@@ -13,7 +155,7 @@ button
 
 #main{
     width: 50%;
-    max-width: 50%;
+    /*max-width: 50%;*/
     margin-right: 60%;
     margin-top: 18%;
     margin-left: 18%;
@@ -141,7 +283,6 @@ button
 }
 
 #col1 {
-    /*use to be 507 px*/
     width: 33.4%;
     /*width: 507px;*/
 }
@@ -155,3 +296,178 @@ button
     /*width: 507px;*/
     width: 33.4%;
 }
+
+
+
+
+
+
+#mobile_nav{
+    position: absolute;
+    visibility: hidden;
+}
+
+#top_mobile_nav{
+    background-color: black;
+    padding: .3% 0;
+    position: absolute;
+    visibility: hidden;
+}
+
+#navicon{
+    cursor: pointer;
+    filter: invert();
+}
+
+
+@media only screen and (max-width: 480px){
+    #bg{
+        margin-left: -20%;
+        float: none;
+    }
+}
+
+@media only screen and (max-width: 1517px){
+    #bg img{
+        margin-top: 7%;
+        width: 570px;
+    }
+    #wrapper{
+        margin-top: 10%;
+    }
+}
+
+@media only screen and (max-width: 1350px){
+    #wrapper{
+        margin-top: 13%;
+    }
+}
+
+@media only screen and (max-width: 1200px){
+    #main{
+        margin-left: 14%;
+    }
+    #bg img{
+        width: 520px;
+    }
+}
+
+@media only screen and (max-width: 1100px){
+    #wrapper{
+        margin-top: 8%;
+    }
+    #wrapper a {
+        font-size: 30px;
+    }
+    #bg img{
+        width: 450px;
+    }
+}
+
+@media only screen and (max-width: 1000px){
+    #main{
+        margin-left: 11%;
+    }
+}
+
+@media only screen and (max-width: 950px)and (min-width: 240px) {
+    #gfx, #proj, #resume{
+        padding: 15% 0;
+    }
+
+
+    #nav{
+        visibility: hidden;
+    }
+
+    #mobile_nav{
+        margin-top: -.001%;
+        text-align: center;
+        position: relative;
+        visibility: visible;
+    }
+
+    #mobile_nav a:link, #mobile_nav a:visited {
+        padding: 1% 0;
+        width: 90%;
+        display: block;
+        text-decoration: none;
+        font-family: Roboto;
+        font-size: 20px;
+        border-bottom: 6px;
+        background-color: rgba(0,0,0,0.8);
+        color: white;
+    }
+
+    #mobile_nav #nav_last{
+        padding-bottom: 3%;
+    }
+
+    #mobile_nav a:hover {
+        color: orange;
+    }
+
+    #top_mobile_nav{
+        position: relative;
+        visibility: visible;
+
+    }
+
+    #wrapper{
+        display: block;
+    }
+
+    #col1, #col2, #col3{
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+    }
+
+    #bg{
+        margin-top: 5%;
+        float: none;
+        margin-left: 25%;
+        width: 300px;
+        margin-bottom: 30%;
+    }
+
+    #main {
+        margin-top: -20%;
+        text-align: center;
+        max-width: 90%;
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    #social_media{
+        margin-top: 15%;
+    }
+
+    #bg img{
+        width: 350px;
+        margin-left: -5%;
+    }
+
+    #main img{
+        margin-top: -5%;
+        margin-bottom: 12%;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    #bg img{
+        width: 300px;
+        margin-left: -8%;
+    }
+    #intro h1 {
+        font-size: 50px;
+    }
+    #intro h2 {
+        font-size: 35px;
+    }
+}
+
+
