--- a/CSS/contacts_css.css
+++ b/CSS/contacts_css.css
@@ -45,3 +45,79 @@
 #social_media a{
     padding-right: 4%;
 }
+
+#email_mobile, #phone_mobile{
+    position: absolute;
+    visibility: hidden;
+}
+
+#phone_mobile{
+    padding: 8% 0 5% 0;
+}
+
+#email_mobile{
+    padding: 8% 0 3% 0;
+}
+
+#email_mobile h2, #phone_mobile h2{
+    font-family: Roboto;
+}
+
+@media only screen and (max-width: 1000px){
+    #phone img, #email img{
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    #social_media img{
+        max-width: 80px;
+        height: auto;
+    }
+}
+
+@media only screen and (max-width: 580px){
+    #social_media img{
+        max-width: 50px;
+        height: auto;
+    }
+
+    #social_media{
+        margin-left: -5%;
+    }
+}
+
+@media only screen and (max-width: 550px){
+    #social_media{
+        margin-left: -8%;
+    }
+
+    #p_icon, #e_icon{
+        visibility: hidden;
+        position: fixed;
+    }
+
+    #email_mobile, #phone_mobile{
+        position: relative;
+        visibility: visible;
+        text-align: center;
+    }
+
+    #email_mobile img{
+        text-align: center;
+        max-width: 60%;
+        height: auto;
+    }
+
+    #phone_mobile img{
+        text-align: center;
+        max-width: 50%;
+        height: auto;
+    }
+
+    #title_ h1{
+        font-size: 50px;
+    }
+}
+
