--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -132,7 +132,7 @@ body {
 #gfx{
     margin-top: 31%;
     padding: 20% 0;
-    background-image: url("indexbg1x.jpg");
+    background-image: url("../Images/indexbg1x.jpg");
     background-size: 100% auto;
     text-align: center;
     background-position: 50% 18%;
@@ -157,7 +157,7 @@ body {
 #proj{
     margin-top: .5%;
     padding: 20% 0;
-    background-image: url("indexbg2.jpg");
+    background-image: url("../Images/indexbg2.jpg");
     text-align: center;
     background-position: 50% 18%;
 
